
Slick 7.x-2.0-dev, 2015-4-6
---------------------------
Updated slick.load.min.js slide--current class to reflect the new grid option.
Added info to Slick Views about the difference between Module grid and the
  library grid. The module Grid feature has been around before the Slick library
  officiallly supported it at Slick 1.5.
Added options for builtin Grid system: rows and slidesPerRow.
Updated the verticalScrolling option to verticalSwiping. Be sure to re-save it
  to pick-up the newly renamed option.
Updated to Slick 1.5.

Slick 7.x-2.0-dev, 2015-3-31
----------------------------
\o/ at last .... happy for a great Alpha release ;)
Added various relevant useful info somewhere to clarify the intention.
Added relevant info on sanitization at slick.theme.inc which should be handled
  by implementors since most are renderable array.
Added sanitization on Slick Views slide captions.
Updated slick_devel_preprocess_slick() to drop data-slick test to reflect its
  removal at Slick 1.5, see:
  https://github.com/kenwheeler/slick/issues/1058
Fixed wrong name slick_inline_css_output_info() to use the actual module name
  slick_fields_inline_css_output_info().
Added slick_inline_css_output_info_alter() to modify the inline CSS outputs.
Issue #2461693 by rfnbnkr: asNavFor stopped working with AJAX loaded slicks.
Moved sanitization for asnavfor_target to template_preprocess_slick().
Fixed trivial edge cases with extra white spaces for asnavfor targets.
Fixed line breaks after php tags.

Slick 7.x-2.0-dev, 2015-3-30
----------------------------
Fixed both phpcs and coder false positive with list() skipped value.
Fixed disappeared admin tooltip after AJAX which seemingly broke at some point.
Fixed phpcs complains with Closing parenthesis of array declaration.
Issue #2459669 by emcniece: Handle non-init'd jQuery Update module settings.
Issue #2459657 by emcniece: Add better error message for missing files /
  improper library install.