@@ -52,13 +52,12 @@ function slick_devel_library_alter(&$libraries, $module) {
       );
     }
   }
-  else {
-    // Switch to the development version of the slick.load.js.
-    if (SLICK_DEVEL_REPLACE && $module == 'slick' && isset($libraries['drupal.slick'])) {
-      $libraries['drupal.slick']['js'] = array(
-        $path . '/js/slick.load.devel.js' => array('group' => JS_DEFAULT, 'weight' => 0),
-      );
-    }
+
+  // Switch to the development version of the slick.load.js.
+  if (SLICK_DEVEL_REPLACE && $module == 'slick' && isset($libraries['drupal.slick'])) {
+    $libraries['drupal.slick']['js'] = array(
+      $path . '/js/slick.load.devel.js' => array('group' => JS_DEFAULT, 'weight' => 0),
+    );
   }
 
   if (SLICK_DEVEL_DISABLE) {
@@ -80,5 +79,16 @@ function slick_devel_libraries_info_alter(&$libraries) {
         'slick/slick.js',
       );
     }
+  }
+}
+
+/**
+ * Implements hook_preprocess_HOOK().
+ */
+function slick_devel_preprocess_slick(&$variables) {
+  if ((SLICK_DEVEL_DISABLE || SLICK_DEVEL_REPLACE)  && isset($variables['content_attributes_array']['data-config'])) {
+    $variables['content_attributes_array']['data-slick'] = $variables['content_attributes_array']['data-config'];
+    unset($variables['content_attributes_array']['data-config']);
+    // kpr($variables);
   }
 }
