@@ -85,7 +85,7 @@ function template_preprocess_slick_views(&$variables) {
 
       // Allows text-only thumbnail navigation, like regular tabs.
       if (isset($row->thumbnail_caption) && !empty($row->thumbnail_caption)) {
-        $thumb['caption']['data']['#markup'] = filter_xss_admin($row->thumbnail_caption);
+        $thumb['caption']['data']['#markup'] = slick_filter_xss_admin($row->thumbnail_caption);
         if (!isset($thumb['slide'])) {
           $thumb['slide'] = array();
         }
