@@ -1,4 +1,14 @@
 
+
+Slick 7.x-2.0-dev, 2015-4-11
+----------------------------
+Issue #2466327 by rHOnDO: Allow alterable caption HTML tags.
+Added slick_filter_xss_admin() to ease up extending allowed tags restrictively
+  which can be set using variable_set('slick_allowed_tags', $allowed_tags).
+  Be sure to clear cache.
+Fixed slick_example hook_views_api() api version from Bulk exporter.
+Updated slick.load.devel.js to test the options using data-slick.
+
 Slick 7.x-2.0-dev, 2015-4-6
 ---------------------------
 Updated slick.load.min.js slide--current class to reflect the new grid option.
